# reader3

./: .env  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  README.zh-CN.md  SETUP.md  chat_service.py  config_manager.py  dev-tools.sh  docker-compose.yml  migrate_books.py  ops.sh  pnpm-lock.yaml  prompts.py  pyproject.toml  server.py  test-docker.sh  test_output.txt
.github/workflows/: health-check.yml
frontend/: index.html  reader.html
frontend-api/: books.js  client.js  config.js
frontend/api/: chat.js
frontend/css/: styles.css
frontend/js/: app.js  reader-app.js
frontend/js/components/: LibraryPage.js  ReaderPage.js
frontend/js/utils/: darkMode.js
frontend/locales/: index.js
frontend/locales/en/: translations.json
frontend/locales/zh-CN/: translations.json
static/css/: reader.css  styles.css
static/js/: library.js  reader.js
