[project]
name = "reader3"
version = "3.0"
description = "Intelligent EPUB reader with AI chat functionality"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.38.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sse-starlette>=1.6.2",
    "loguru>=0.7.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
]
